# Dimensionality-Controls-When-Modularity-Shapes-Representational-Geometry

./: .gitignore  README.md
a1b2_modular/: README.md  pyproject.toml
a1b2_modular/a1b2/: __init__.py  decision.py
a1b2_modular/a1b2/analysis/: __init__.py  correlations.py  correlations_a1b2.py  experiment.py  paper_single_baseline.py  participant.py  retraining.py  retraining_a1b2.py  run_loader.py  stats.py  transfer_interference.py
a1b2_modular/a1b2/data/: __init__.py  basic_funcs.py  preprocessing.py  temporal.py
a1b2_modular/a1b2/models/: __init__.py  community.py  experiments.json  ffn.py  rnn_init.py  surrogate.py  two_module_rnn.py  vonmises.py
a1b2_modular/a1b2/training/: __init__.py  community.py  schedule.py  simulation.py  tasks_stub.py
a1b2_modular/a1b2/utils/: __init__.py  figure_settings.py  figure_utils.py  plotting.py  run_config.py  sim_storage.py
a1b2_modular/notebooks/: README.md
a1b2_modular/scripts/: 01_preprocess_data.py  02_run_simulations.py  03_fit_vonmises.py  03_functional_specialization.py
overleaf/: README.md  example.bib  main.tex
