[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "a1b2"
version = "0.1.0"
description = "Unified A1-B-A2 transfer-interference task with FFN and two-module RNN (dynspec)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "torch",
    "tqdm",
    "scikit-learn",
]

[project.optional-dependencies]
notebook-stats = ["statsmodels"]

[tool.setuptools.packages.find]
where = ["."]
include = ["a1b2*"]
